--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -4,7 +4,6 @@
     color: @lavender;
     font-family: JetBrainsMono Nerd Font Mono;
     font-size: 18px;
-    font-weight: bold;
     min-height: 0;
 }
 
@@ -16,15 +15,13 @@
 
 #workspaces {
     border-radius: 0.5rem;
-    margin: 4px;
+    margin: 8px 8px;
     background-color: @surface0;
-    margin-left: 1rem;
 }
 
 #workspaces button {
     color: @base;
     border-radius: 0.5rem;
-    padding: 0.2rem;
 }
 
 #workspaces button.active {
@@ -37,6 +34,10 @@
     border-radius: 0.5rem;
 }
 
+#workspaces button.urgent {
+    background-color: @red;
+}
+
 #pulseaudio,
 #custom-music,
 #tray,
@@ -46,15 +47,31 @@
 #battery,
 #memory,
 #cpu,
+#privacy,
+#window,
 #custom-lock,
 #custom-power {
     background-color: @surface0;
+    margin: 8px 0px;
     padding: 0.3rem 0.8rem;
-    margin: 5px 5px;
+}
+
+#window {
+    margin-left: 12px;
+    border-radius: 0.5rem
 }
 
 #clock {
     color: @teal;
+    border-radius: 0.5rem;
+}
+
+#privacy {
+    border-radius: 0.5rem;
+}
+
+#tray {
+    margin: 8px;
     border-radius: 0.5rem;
 }
 
@@ -89,10 +106,12 @@
 
 #pulseaudio {
     color: @maroon;
+    border-radius: 0 0.5rem 0.05rem 0;
 }
 
 #custom-lock {
     border-radius: 0.5rem 0px 0px 0.5rem;
+    margin-left: 12px;
     color: @lavender;
 }
 
@@ -100,9 +119,4 @@
     margin-right: 1rem;
     border-radius: 0px 0.5rem 0.5rem 0px;
     color: @red;
-}
-
-#tray {
-    margin-right: 1rem;
-    border-radius: 1rem;
 }
