--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -10,7 +10,7 @@
 #waybar {
     background: transparent;
     color: @text;
-    margin: 5px 5px;
+    margin: 5px 5px 0px 5px;
 }
 
 #workspaces {
